# figure_report

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
conda_recipe/: meta.yaml
src/figure_report/: __init__.py  html_report.py  patterns.py  report.py  report_page_template.html  viewer.css
tests/: test_report.py
