[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "figure_report"
version = "0.1"
description="Create HTML report from set of hierarchically grouped figures"
authors=[
  {name = "Stephen Kraemer", email = "stephenkraemer@gmail.com"},
]
license={text = "MIT"}
requires-python = ">= 3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
exclude = ['docs']
